--- a/styly/zakladni_body.css
+++ b/styly/zakladni_body.css
@@ -25,6 +25,8 @@ nav a {
 }
 .logo h3 {
     line-height: 100%;
+    font-size: 100%;
+    text-align: center;
 }
 .nav-container > .logo > img{
     width: auto;
@@ -47,4 +49,7 @@ nav a {
     display: flex;
     align-items: center;
     gap: .5vw;
+}
+@media only screen and (min-width: 320px) and (max-width: 480px){
+    
 }
