--- a/styly/zakladni_body.css
+++ b/styly/zakladni_body.css
@@ -1,5 +1,13 @@
-.nav-container * {
+/*.nav-container * {
     border: 1px dotted red;
+}*/
+
+:root {
+    --nav-text-color: white;
+}
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .nav-container{
@@ -11,6 +19,7 @@
     padding-bottom: 1vh;
     padding-left: 5vw;
     padding-right: 5vw;
+    background-color: #023618;
 }
 
 nav a {
@@ -27,10 +36,13 @@ nav a {
     line-height: 100%;
     font-size: 100%;
     text-align: center;
+    font-size: 1.2rem;
+    color: var(--nav-text-color);
 }
 .nav-container > .logo > img{
     width: auto;
     height: 100%;
+    filter: invert(102%) sepia(10%) saturate(1352%) hue-rotate(87deg) brightness(119%) contrast(119%);
 }
 
 /*header nav navigace*/
@@ -39,17 +51,42 @@ nav a {
     list-style: none;
     align-self: center;
     align-items: center;
+    width: max-content;
+    font-size: 1.5rem;
     gap: 1vw;
     padding-left: 0;
     height: 100%;
+}
+.navigace a {
+    color: var(--nav-text-color);
 }
 
 /*header nav prihlaseni*/
 .prihlaseni{
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: max-content;
     gap: .5vw;
 }
+.prihlaseni a {
+    color: var(--nav-text-color);
+}
+
+/*po zobrazení na mobilu*/
 @media only screen and (min-width: 320px) and (max-width: 480px){
-    
+    .nav-container{
+        padding-left: 1vw;
+        padding-right: 1vw;
+    }
+    .logo h3 {
+        display: none;
+    }
+    .navigace{
+        font-size: 1rem;
+    }
+    .prihlaseni{
+        flex-direction: column;
+        font-size: .8rem;
+    }
 }
