--- a/styly/zakladni_body.css
+++ b/styly/zakladni_body.css
@@ -10,16 +10,22 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header nav {
+    background-color: #023618;
+}
+
 .nav-container{
+    margin: auto;
     border: 1px dotted black;
     display: flex;
     justify-content: space-between;
     height: 7vh;
+    max-width: 1440px;
     padding-top: 1vh;
     padding-bottom: 1vh;
     padding-left: 5vw;
     padding-right: 5vw;
-    background-color: #023618;
+    
 }
 
 nav a {
@@ -53,7 +59,7 @@ nav a {
     align-items: center;
     width: max-content;
     font-size: 1.5rem;
-    gap: 1vw;
+    gap: 4vw;
     padding-left: 0;
     height: 100%;
 }
