--- a/styly/zakladni_body.css
+++ b/styly/zakladni_body.css
@@ -1,7 +1,6 @@
 /*.nav-container * {
     border: 1px dotted red;
 }*/
-
 :root {
     --nav-text-color: white;
 }
@@ -10,6 +9,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/*HEADER*/
+    /*Nav*/
 header nav {
     background-color: #023618;
 }
@@ -25,7 +26,6 @@ header nav {
     padding-bottom: 1vh;
     padding-left: 5vw;
     padding-right: 5vw;
-    
 }
 
 nav a {
@@ -59,12 +59,20 @@ nav a {
     align-items: center;
     width: max-content;
     font-size: 1.5rem;
-    gap: 4vw;
+    gap: 3vw;
     padding-left: 0;
     height: 100%;
 }
 .navigace a {
     color: var(--nav-text-color);
+    border-radius: .5rem;
+    padding: .4rem;
+}
+.navigace a:hover{
+    background: linear-gradient(45deg, rgb(0, 0, 0) 0%, rgba(2,54,24,1) 59%);
+}
+.navigace a:active{
+    background: linear-gradient(225deg, rgb(0, 0, 0) 0%, rgba(2,54,24,1) 59%);
 }
 
 /*header nav prihlaseni*/
