--- a/styly/zakladni_body.css
+++ b/styly/zakladni_body.css
@@ -86,6 +86,9 @@ nav a {
 .prihlaseni a {
     color: var(--nav-text-color);
 }
+.prihlaseni a:hover{
+    border-bottom: 1.5px solid white;
+}
 
 /*po zobrazení na mobilu*/
 @media only screen and (min-width: 320px) and (max-width: 480px){
