--- a/styly/zakladni_body.css
+++ b/styly/zakladni_body.css
@@ -7,13 +7,16 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
+    padding-top: 8vh;
 }
 
 /*HEADER*/
     /*Nav*/
 
 header{
-    margin-bottom: 1vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
 }
 header nav {
     background-color: #023618;
