uprava rozložení h3 loga

--- a/styly/zakladni_body.css
+++ b/styly/zakladni_body.css
@@ -47,6 +47,8 @@ nav a {
     line-height: 100%;
     font-size: 100%;
     text-align: center;
+    align-self: center;
+    margin: 0;
     font-size: 1.2rem;
     color: var(--nav-text-color);
 }
