--- a/styly/zakladni_body.css
+++ b/styly/zakladni_body.css
@@ -131,7 +131,7 @@ nav a {
 
 .form-group input{
     border: .1rem solid #ccc;
-    height: 6vh;
+    height: 50px;
     font-size: 100%;
     border-radius: 5px;
     padding-left: 1rem;
